k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: power-engine
  namespace: power-engine
  labels:
    app: power-engine
    monitor: enabled
spec:
  selector:
    app: power-engine
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
